--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -12,6 +12,6 @@
     </block>
   </view>
   <view class="usermotto">
-    <!-- <text class="user-motto">{{motto}}</text> -->
+    <text class="user-motto">{{motto}}</text>
   </view>
 </view>
