修改图片和图标
修改图片和图标

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -6,12 +6,9 @@
   <view>
     <block wx:for="{{menu}}">
       <view class="menu-contain">
-      <view><icon type="success" size="40" color="{{item}}"/></view>
-      <view><text class="menu-font">{{item.title}}</text></view>
+      <view><image src="{{item.icon}}" class="menu-icon"/><text class="menu-font">{{item.title}}</text></view>
+      <view></view>
       </view>
     </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
   </view>
 </view>
