--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -22,3 +22,27 @@
   padding: 5px;
   border-radius: 100%;
 }
+.split{
+  height: 5px;
+  background: #eeeeee;
+}
+.gift-contain{
+  padding: 10px;
+  text-align: left;
+}
+.gift-small-text{
+  margin-top: 5px;
+  font-size: 10px;
+  color: #696969;
+}
+.gift-img{
+  margin: 10px 0 ;
+  width: 100%;
+  height: 120px;
+}
+.advertisement{
+  padding: 25px 0;
+}
+.advertisement image{
+  width: 100%;
+}
