--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,4 +1,42 @@
 /**index.wxss**/
+.userInfo{
+  background-color: #3cc51f;
+  padding: 10rpx;
+  width: 100%;
+}
+.avatar-view{
+  display: inline-block;
+  width: 200rpx;
+}
+.name-view{
+  display: inline-block;
+  width: 500rpx;
+  text-align: left;
+}
+.name-view-con{
+  position: relative;
+  top: -64rpx;
+  /* height: 128rpx; */
+}
+.userinfo-avatar {
+  width: 128rpx;
+  height: 128rpx;
+  margin: 10rpx;
+  border-radius: 50%;
+}
+.userinfo-nickname {
+  width: 600rpx;
+  color: #fff;
+  font-size: 16px;
+  margin-right: 10rpx;
+}
+.userinfo-vipinfo {
+  background-color: rgba(0, 0, 0, 0.3);
+  padding:5rpx 10rpx;
+  font-size: 10px;
+  border-radius: 5rpx;
+  color: #fff;
+}
 .wrapper {
   text-align: center;
   height: 100%;
