--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,17 +1,23 @@
 <!--index.wxml-->
 <view class="wrapper">
   <view class="userInfo">
-    <!-- {{vipInfo.vipLevel}} -->
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
-      <view class="avatar-view">
-        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      </view>
-      <view class="name-view">
-        <view class="name-view-con">
-          <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-          <text class="userinfo-vipinfo">{{vipInfo.vipLevel}}</text>
+      <image class='card-background' src="./img/card-background.png"></image>
+      <view class="userinfo-view">
+        <view class="avatar-view">
+          <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
         </view>
+        <view class="name-view">
+          <view class="name-view-con">
+            <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+            <text class="userinfo-vipinfo">{{vipInfo.vipLevel}}</text>
+          </view>
+        </view>
+      </view>
+      <view class='card-title'>
+        <text>会员权益  |  </text>
+        <text>专属活动</text>
       </view>
     </block>
   </view>
@@ -20,7 +26,7 @@
   </view>
   <view>
     <block wx:for="{{menu}}">
-      <view class="menu-contain">
+      <view class="menu-contain" data-menu="{{item}}" bindtap="clickMenu" >
         <view>
           <image src="{{item.icon}}" class="menu-icon" />
           <text class="menu-font">{{item.title}}</text>
