--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,87 +1,128 @@
 /**index.wxss**/
-.userInfo{
-  background-color: #3cc51f;
-  padding: 10rpx;
+
+.userInfo {
+  /* background-color: #88b58a; */
   width: 100%;
+  height: 188rpx;
 }
-.avatar-view{
-  display: inline-block;
+
+.card-background {
+  width: 100%;
+  height: 188rpx;
+  position: absolute;
+}
+
+.userinfo-view {
+  width: 100%;
+  display: inline-flex;
+  height: 148rpx;
+}
+
+.avatar-view {
+  /* display: inline-block; */
   width: 200rpx;
 }
-.name-view{
-  display: inline-block;
-  width: 500rpx;
+
+.name-view {
+  width: 100%;
+  /* display: inline-block; */
   text-align: left;
+  font-weight: bold;
 }
-.name-view-con{
+
+.name-view-con {
   position: relative;
-  top: -64rpx;
-  /* height: 128rpx; */
-}
-.userinfo-avatar {
-  width: 128rpx;
   height: 128rpx;
-  margin: 10rpx;
-  border-radius: 50%;
-  border: 2px solid #eeeeee;
+  line-height: 128rpx;
 }
+
+.card-title {
+  margin-left: 30rpx; 
+  display: block;
+  position: relative;
+  color: #fff;
+  text-align: left;
+  font-size: 10px;
+}
+
+.userinfo-avatar {
+  width: 88rpx;
+  height: 88rpx;
+  margin: 20rpx;
+  border-radius: 50%;
+  border: 2px solid #eee;
+  position: relative;
+}
+
 .userinfo-nickname {
   width: 600rpx;
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   margin-right: 10rpx;
 }
+
 .userinfo-vipinfo {
   background-color: rgba(0, 0, 0, 0.3);
-  padding:5rpx 10rpx;
+  padding: 5rpx 10rpx;
   font-size: 10px;
   border-radius: 5rpx;
   color: #fff;
 }
+
 .wrapper {
   text-align: center;
   height: 100%;
 }
-.background-img{
+
+.background-img {
   width: 100%;
   height: 350rpx;
 }
-.menu-contain{
+
+.menu-contain {
   width: 25%;
   display: inline-block;
 }
-.menu-font{
+
+.menu-font {
   font-size: 10px;
   display: block;
 }
-.menu-icon{
+
+.menu-icon {
   width: 20px;
   height: 20px;
   background-color: #41695e;
   padding: 5px;
   border-radius: 100%;
 }
-.split{
+
+.split {
   height: 5px;
-  background: #eeeeee;
+  background: #eee;
 }
-.gift-contain{
+
+.gift-contain {
   padding: 10px;
   text-align: left;
 }
-.gift-small-text{
+
+.gift-small-text {
   margin-top: 5px;
   font-size: 10px;
   color: #696969;
 }
-.gift-img{
-  margin: 10px 0 ;
+
+.gift-img {
+  margin: 10px 0;
   width: 100%;
   height: 120px;
 }
-.advertisement{
+
+.advertisement {
   padding: 25px 0;
 }
-.advertisement image{
+
+.advertisement image {
   width: 100%;
 }
