--- a/miniprogram/pages/kind/index.wxml
+++ b/miniprogram/pages/kind/index.wxml
@@ -1,4 +1,9 @@
 <!--index.wxml-->
 <view class="wrapper">
-  分类
+  <view class="weui-cells__title">输入商品名</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" auto-focus placeholder="将会获取焦点"/>
+      </view>
+    </view>
 </view>
