--- a/miniprogram/pages/kind/index.wxss
+++ b/miniprogram/pages/kind/index.wxss
@@ -1,26 +1,79 @@
- @import '/miniprogram_npm/weui-miniprogram/weui-wxss/dist/style/weui.wxss'; 
- .scrollview-contain{
-   display: flex
- }
-.left{
+@import '/miniprogram_npm/weui-miniprogram/weui-wxss/dist/style/weui.wxss';
+
+.scrollview-contain {
+  display: flex;
+}
+
+.left {
   flex: 1;
 }
-.left-tab{
-  padding: 40rpx 40rpx;
+
+.left-tab {
+  padding: 30rpx 40rpx;
   text-align: center;
   font-size: 12px;
-  background: #eeeeee;
+  background: #f6f6f6;
   overflow-y: auto;
   border-bottom: #d8d8d8 1px solid;
 }
-.left-tab.active{
+
+.left-tab.active {
   background: #fff;
   border-left: #41695e 8rpx solid;
 }
-.right{
+
+.right {
   flex: 3;
+  padding: 20rpx;
 }
 
-.search-self{
+.back-img {
+  width: 100%;
+  height: 150px;
+}
+
+.search-self {
   background-color: #fff;
+}
+
+.good {
+  padding: 40rpx 10rpx;
+  /*  */
+}
+
+.good-img {
+  width: 60px;
+  height: 60px;
+  float: left;
+  padding: 5px;
+}
+
+.good-title {
+  font-size: 14px;
+  width: 350rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.good-desc {
+  font-size: 10px;
+  color: #c9c9c9;
+  width: 350rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.plus {
+  background-color: #41695e;
+  color: #fff;
+  float: right;
+  display: block;
+  width: 22px;
+  height: 22px;
+  line-height: 20px;
+  text-align: center;
+  border-radius: 50px;
+  font-size: 20px;
 }
