--- a/miniprogram/pages/personcenter/index.wxml
+++ b/miniprogram/pages/personcenter/index.wxml
@@ -1,4 +1,40 @@
-<!--index.wxml-->
-<view class="wrapper">
-  个人中心
+<view class="page">
+  <view class="userInfo">
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+    <block wx:else>
+      <image class='card-background' src="../index/img/card-background.png"></image>
+      <view class="userinfo-view">
+        <view class="avatar-view">
+          <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+        </view>
+        <view class="name-view">
+          <view class="name-view-con">
+            <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+            <text class="userinfo-vipinfo">{{vipInfo.vipLevel}}</text>
+          </view>
+        </view>
+      </view>
+      <view class='card-title'>
+        <text>会员权益  |  </text>
+        <text>专属活动</text>
+      </view>
+    </block>
+  </view>
+  <view class="weui-cells weui-cells_after-title">
+            <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+                <view class="weui-cell__bd">订单信息</view>
+                <view class="weui-cell__ft weui-cell__ft_in-access">查看全部订单</view>
+            </navigator>
+        </view>
+
+        <view class="split"></view>
+    <view class="page__bd">
+        <view class="weui-grids">
+            <block wx:for="{{grids}}" wx:key="*this">
+                <navigator url="" class="weui-grid" hover-class="weui-grid_active">
+                    <view class="weui-grid__label">Grid</view>
+                </navigator>
+            </block>
+        </view>
+    </view>
 </view>
