--- a/miniprogram/pages/personcenter/index.wxss
+++ b/miniprogram/pages/personcenter/index.wxss
@@ -1,3 +1,5 @@
+@import '/miniprogram_npm/weui-miniprogram/weui-wxss/dist/style/weui.wxss';
+
 .userInfo {
   /* background-color: #88b58a; */
   width: 100%;
