右侧到左侧的滚动
滚动

--- a/miniprogram/pages/kind/index.wxml
+++ b/miniprogram/pages/kind/index.wxml
@@ -4,9 +4,9 @@
     <mp-searchbar placeholder="请输入关键字搜索" bindselectresult="selectResult" search="{{search}}" ext-class='search-self'></mp-searchbar>
   </view>
   <view class="scrollview-contain">
-    <scroll-view class="left" scroll-y style="height:{{height-48}}px">
+    <scroll-view class="left" scroll-y style="height:{{height-48}}px" scroll-into-view="{{scrollMenuId}}" scroll-with-animation>
       <block wx:for="{{kind}}" wx:key="index">
-        <view class="left-tab {{index == selectedIndex ? 'active' :'unactive' }}" data-index="{{index}}" bindtap="switchKind">{{item.title}}</view>
+        <view class="left-tab {{index == selectedIndex ? 'active' :'unactive' }}" data-index="{{index}}" bindtap="switchKind" id="menu{{index}}">{{item.title}}</view>
       </block>
     </scroll-view>
     <scroll-view class="right" scroll-y style="height:{{height-70}}px" scroll-into-view="{{scrollKindId}}" scroll-with-animation
@@ -39,8 +39,6 @@
           </view>
         </block>
       </block>
-
-
     </scroll-view>
   </view>
 </view>
