--- a/miniprogram/pages/kind/index.wxml
+++ b/miniprogram/pages/kind/index.wxml
@@ -5,7 +5,7 @@
   </view>
   <view class="scrollview-contain">
     <scroll-view class="left" scroll-y style="height:{{height-48}}px" scroll-into-view="{{scrollMenuId}}" scroll-with-animation>
-      <block wx:for="{{kind}}" wx:key="index">
+      <block wx:for="{{kind}}" wx:key="`index">
         <view class="left-tab {{index == selectedIndex ? 'active' :'unactive' }}" data-index="{{index}}" bindtap="switchKind" id="menu{{index}}">{{item.title}}</view>
       </block>
     </scroll-view>
