--- a/miniprogram/pages/personcenter/index.wxss
+++ b/miniprogram/pages/personcenter/index.wxss
@@ -80,7 +80,7 @@
 }
 
 page{
-    background-color: #EDEDED;
+    background-color: #fff;
     font-size: 16px;
     font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
 }
