--- a/miniprogram/pages/kind/index.wxss
+++ b/miniprogram/pages/kind/index.wxss
@@ -35,11 +35,13 @@
 .search-self {
   background-color: #fff;
 }
-.group-title{
-  font-size: 14px; 
+
+.group-title {
+  font-size: 14px;
   padding: 10px 10px 0 10px;
   height: 30px;
 }
+
 .good {
   padding: 10px 10px;
   height: 80px;
@@ -69,15 +71,35 @@
   text-overflow: ellipsis;
 }
 
+
+
+
+
+.productCount {
+  float: right;
+  font-size: 14px;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  line-height: 20px;
+}
+
+.minus {
+  color: #c9c9c9;
+  border: 1px solid #d8d8d8;
+}
 .plus {
   background-color: #41695e;
   color: #fff;
+  border: 1px solid #41695e;
+}
+.cricle {
   float: right;
   display: block;
-  width: 22px;
-  height: 22px;
+  width: 20px;
+  height: 20px;
   line-height: 20px;
   text-align: center;
   border-radius: 50px;
-  font-size: 20px;
+  font-size: 18px;
 }
