--- a/miniprogram/pages/kind/index.wxss
+++ b/miniprogram/pages/kind/index.wxss
@@ -71,10 +71,6 @@
   text-overflow: ellipsis;
 }
 
-
-
-
-
 .productCount {
   float: right;
   font-size: 14px;
@@ -88,11 +84,13 @@
   color: #c9c9c9;
   border: 1px solid #d8d8d8;
 }
+
 .plus {
   background-color: #41695e;
   color: #fff;
   border: 1px solid #41695e;
 }
+
 .cricle {
   float: right;
   display: block;
@@ -102,4 +100,12 @@
   text-align: center;
   border-radius: 50px;
   font-size: 18px;
+}
+
+.shopCart{
+  position: fixed;
+  width: 100%;
+  background: #fff;
+  height: 50px;
+  bottom: 0;
 }
