--- a/miniprogram/pages/kind/index.wxss
+++ b/miniprogram/pages/kind/index.wxss
@@ -102,15 +102,17 @@
   font-size: 18px;
 }
 
-.shopCart{
+.shopCart {
   position: fixed;
   width: 100%;
   background: #f6f6f6;
   height: 50px;
   bottom: 0;
   text-align: right;
+    z-index: 3;
 }
-.shop-cart{
+
+.shop-cart {
   position: absolute;
   top: -3px;
   margin-left: 20px;
@@ -121,15 +123,18 @@
   text-align: center;
   font-size: 8px;
   border-radius: 50px;
+  z-index: 3;
 }
-.shop-cart-icon{
+
+.shop-cart-icon {
   width: 25px;
   height: 25px;
   vertical-align: middle;
 }
 
-.shop-count{
+.shop-count {
   position: relative;
+  z-index: 3;
   left: 55px;
   color: #fff;
   width: 15px;
@@ -140,11 +145,13 @@
   border-radius: 50px;
   background: #41695e;
 }
-.total-money{
+
+.total-money {
   display: inline-block;
   font-size: 14px;
 }
-.submit{
+
+.submit {
   width: 50px;
   font-size: 14px;
   text-align: center;
@@ -155,4 +162,54 @@
   color: #fff;
   display: inline-block;
   margin: 0 10px;
+}
+
+.shop-cart-info {
+  position: fixed;
+  width: 100%;
+  background: #fff;
+  bottom: 50px;
+  z-index: 3
+}
+
+.cart-detail-info {
+  font-size: 14px;
+  padding: 10px 20px 0px 20px;
+
+  /* padding-right: 30px; */
+}
+.remove-all{
+  font-size: 12px;
+  right: 0px;
+  background: #f6f6f6;
+  color: #c9c9c9;
+  text-align: right;
+  padding: 2px 10px 2px 20px;
+}
+.detail-contain{
+  border-bottom: 1px solid #d8d8d8;
+  padding-bottom: 10px;
+}
+.cart-detail-title{
+  vertical-align: middle;
+  display: inline-block;
+  width: 350rpx;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.cart-detail-price{
+  vertical-align: middle;
+  margin-left: 20px;
+  display: inline-block;
+}
+
+.hide-contain{
+  background: rgba(0, 0, 0, 0.3);
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
 }
