--- a/miniprogram/pages/personcenter/index.wxss
+++ b/miniprogram/pages/personcenter/index.wxss
@@ -1,120 +1,16 @@
-@import '/miniprogram_npm/weui-miniprogram/weui-wxss/dist/style/weui.wxss';
-
-.userInfo {
-  /* background-color: #88b58a; */
-  width: 100%;
-  height: 188rpx;
+.page{
+  background: #eeeeee;
+  height: 500px;
+  padding: 10px;
+}
+.my-page-card{
+  height: 200px;
+  border-radius: 10px;
+  background: #fff;
 }
 
-.card-background {
-  width: 100%;
-  height: 188rpx;
-  position: absolute;
-}
-
-.userinfo-view {
-  width: 100%;
-  display: inline-flex;
-  height: 148rpx;
-}
-
-.avatar-view {
-  /* display: inline-block; */
-  width: 200rpx;
-}
-
-.name-view {
-  width: 100%;
-  /* display: inline-block; */
-  text-align: left;
-  font-weight: bold;
-}
-
-.name-view-con {
-  position: relative;
-  height: 128rpx;
-  line-height: 128rpx;
-}
-
-.card-title {
-  margin-left: 30rpx; 
-  display: block;
-  position: relative;
-  color: #fff;
-  text-align: left;
-  font-size: 10px;
-}
-
-.userinfo-avatar {
-  width: 88rpx;
-  height: 88rpx;
-  margin: 20rpx;
-  border-radius: 50%;
-  border: 2px solid #eee;
-  position: relative;
-}
-
-.userinfo-nickname {
-  width: 600rpx;
-  color: #fff;
-  font-size: 14px;
-  margin-right: 10rpx;
-}
-
-.userinfo-vipinfo {
-  background-color: rgba(0, 0, 0, 0.3);
-  padding: 5rpx 10rpx;
-  font-size: 10px;
-  border-radius: 5rpx;
-  color: #fff;
-}
-
-.wrapper {
-  text-align: center;
-  height: 100%;
-}
-
-.background-img {
-  width: 100%;
-  height: 350rpx;
-}
-
-page{
-    background-color: #fff;
-    font-size: 16px;
-    font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
-}
-.page__hd {
-    padding: 40px;
-}
-.page__bd {
-    padding-bottom: 40px;
-}
-.page__bd_spacing {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.page__ft{
-    text-align: center;
-    padding:0 0 10px;
-    padding:0 0 calc(10px + constant(safe-area-inset-bottom));
-    padding:0 0 calc(10px + env(safe-area-inset-bottom));
-}
-
-
-.page__title {
-    text-align: left;
-    font-size: 20px;
-    font-weight: 400;
-}
-
-.page__desc {
-    margin-top: 5px;
-    color: #888888;
-    text-align: left;
-    font-size: 14px;
-}
-.weui-cell_example:before{
-    left:52px;
+.my-service{
+  margin-top: 20px;
+  background: #fff;
+  height: 300px;
 }
