--- a/miniprogram/pages/personcenter/index.wxss
+++ b/miniprogram/pages/personcenter/index.wxss
@@ -23,12 +23,23 @@
   font-size: 14px;
 }
 .my-card-choose{
+  margin-top: 20px;
   text-align: center;
   font-size: 12px;
+  height:50px;
+}
+
+.card-king{
+  display: inline-block;
+  width: 33%;
+}
+.card-count{
+  font-size: 20px;
 }
 
 .my-service{
   margin-top: 10px;
+  padding-top: 10px;
   background: #fff;
   height: 300px;
   font-size: 12px;
@@ -36,4 +47,10 @@
 .service-title{
   border-left: 3px solid #41695e;
   padding-left: 10px;
+  margin-left: 5px;
+}
+.menuItem{
+  display: inline-block;
+  width: 25%;
+  height: 50px;
 }
