--- a/miniprogram/pages/personcenter/index.wxml
+++ b/miniprogram/pages/personcenter/index.wxml
@@ -7,10 +7,26 @@
         </view>
     </view>
     <view class="my-card-choose">
-      券 积分商城 礼品卡
+      <view class="card-king">
+        <view class='card-count'>1</view>
+        <view class='card-name'>券</view>
+      </view>
+      <view class="card-king">
+        <view class='card-count'>84</view>
+        <view class='card-name'>积分商城</view>
+      </view>
+      <view class="card-king">
+        <view class='card-count'>0</view>
+        <view class='card-name'>礼品卡</view>
+      </view>
     </view>
   </view>
   <view class="my-service">
     <view class="service-title">我的服务</view>
+    <view class='service-menu'>
+      <block wx:for="{{menu}}">
+        <view class="menuItem">{{item.title}}</view>
+      </block>
+    </view>
   </view>
 </view>
