--- a/miniprogram/pages/personcenter/index.wxss
+++ b/miniprogram/pages/personcenter/index.wxss
@@ -41,16 +41,24 @@
   margin-top: 10px;
   padding-top: 10px;
   background: #fff;
-  height: 300px;
+  height: 220px;
   font-size: 12px;
 }
 .service-title{
   border-left: 3px solid #41695e;
-  padding-left: 10px;
+  padding:5px 0 5px 10px;
   margin-left: 5px;
+  margin-bottom: 15px;
 }
 .menuItem{
   display: inline-block;
   width: 25%;
-  height: 50px;
+  height: 75px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.icon{
+  width: 30px;
+  height: 30px;
+  margin-bottom: 10px;
 }
