--- a/miniprogram/pages/personcenter/index.wxml
+++ b/miniprogram/pages/personcenter/index.wxml
@@ -25,7 +25,7 @@
     <view class="service-title">我的服务</view>
     <view class='service-menu'>
       <block wx:for="{{menu}}">
-        <view class="menuItem">
+        <view class="menuItem" data-menu="{{item}}" bindtap="clickServiceMenu">
           <image src="{{item.icon}}" class="icon"></image>
           <view>{{item.title}}</view>
         </view>
