--- a/miniprogram/pages/personlocation/index.wxml
+++ b/miniprogram/pages/personlocation/index.wxml
@@ -1,10 +1,18 @@
 <!--index.wxml-->
 <view class="wrapper">
-<view class="center">
- <view>暂无地址信息</view>
-  <view>请点击底部添加地址信息</view>
-</view>
- <view class='choose-address-contain'>
-   <button class="choose-address-button" bindtap="chooseAddress">选择收货地址</button>
- </view>
+  <block wx:if="{{userInfo.length == 0}}">
+    <view class="center">
+      <view>暂无地址信息</view>
+      <view>请点击底部添加地址信息</view>
+    </view>
+  </block>
+  <block wx:else>
+    <block wx:for="{{userInfo}}" wx:key='item'>
+      <view>{{item.userName}}</view>
+      <text>{{item.provinceName}}{{item.cityName}}{{item.provinceName}}{{item.countyName}}{{item.detailInfo}}</text>
+    </block>
+  </block>
+  <view class='choose-address-contain'>
+    <button class="choose-address-button" bindtap="chooseAddress">选择收货地址</button>
+  </view>
 </view>
