--- a/miniprogram/pages/personlocation/index.wxss
+++ b/miniprogram/pages/personlocation/index.wxss
@@ -1,5 +1,6 @@
 .wrapper{
   margin: 0 auto;
+  background-color: #f6f6f6;
 }
 .center{
   display:inline-block;
@@ -20,4 +21,36 @@
   position: fixed;
   bottom: 10px;
   left: calc(50% - 68px);
+}
+.person-location-wrapper{
+  background-color: #f6f6f6;
+  padding: 10px 10px 0 10px;
+    display: flex;
+}
+.person-location{
+  padding: 10px;
+  background: #fff;
+  flex: 6
+}
+.edit-button{
+   background: #fff;
+   flex: 1;
+   padding: 10px;
+   display: flex;
+}
+.address{
+  font-size: 14px;
+  font-weight: bold;
+}
+.name{
+  padding-top: 2px;
+  font-size: 12px;
+  color: #676767;
+}
+.edit-button-img{
+  width: 20px;
+  height: 20px;
+  display: block;
+  justify-content:center;
+  align-self: center;
 }
