--- a/miniprogram/pages/personlocation/index.wxss
+++ b/miniprogram/pages/personlocation/index.wxss
@@ -35,7 +35,7 @@
 .edit-button{
    background: #fff;
    flex: 1;
-   padding: 10px;
+   padding: 10px 0px 10px 40px;
    display: flex;
 }
 .address{
@@ -48,8 +48,8 @@
   color: #676767;
 }
 .edit-button-img{
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   display: block;
   justify-content:center;
   align-self: center;
