--- a/miniprogram/pages/personlocation/index.wxss
+++ b/miniprogram/pages/personlocation/index.wxss
@@ -77,7 +77,7 @@
   display: block;
 }
 .delete-button{
-  width: 20px;
+  width: 22px;
   height: 20px;
   margin-left: 10px;
   background-color:#000;
@@ -91,4 +91,10 @@
   display: inline-block;
   position: relative;
   top: -2px;
+}
+::-webkit-scrollbar {
+  display: none;
+  width: 0;
+  height: 0;
+  color: transparent;
 }
