--- a/miniprogram/pages/personlocation/index.wxml
+++ b/miniprogram/pages/personlocation/index.wxml
@@ -10,9 +10,9 @@
     <block wx:else>
       <view class="all-location-wrapper">
         <block wx:for="{{userInfo}}" wx:key='item'>
-          <scroll-view class="person-location-wrapper scroll-view_H" scroll-x="{{true}}" scroll-with-animation="{{true}}">
+          <scroll-view class="person-location-wrapper scroll-view_H" scroll-x="{{true}}" scroll-with-animation="{{true}}" scroll-left='{{calcScrollLeft[index]}}'>
             <view class="scroll-location">
-              <view class="person-location">
+              <view class="person-location" bindtap="refreshLocation" data-index="{{index}}">
                 <view class='address-name'>
                   <text class="address">{{item.provinceName}}{{item.cityName}}{{item.provinceName}}{{item.countyName}}{{item.detailInfo}}</text>
                   <view class="name">{{item.userName}} {{item.telNumber}}</view>
@@ -22,7 +22,10 @@
                 </view>
               </view>
               <view class="delete-button">
-                <image class="delete-button-img" src="./img/delete.png"></image>
+              <image class="delete-button-img" src="./img/delete.png" bindtap="delDialogOnShow" data-id="{{item._id}}"></image>
+                <mp-dialog title="test" show="{{delDialogShow}}" data-id="{{item._id}}" bindbuttontap="tapDelDialogButton" buttons="{{buttons}}">
+                  <view>确认删除该地址吗</view>
+                </mp-dialog>
               </view>
             </view>
           </scroll-view>
