--- a/miniprogram/pages/personlocation/editLocation/editLocation.wxml
+++ b/miniprogram/pages/personlocation/editLocation/editLocation.wxml
@@ -1,1 +1,28 @@
-<view>123</view>
+<view>
+<form bindsubmit="formSubmit">
+  <view class="info-wrapper">
+    <view class="info-inner">
+      <view class="info-item">
+        <text class="info-title">收货人</text>
+        <input name="name" focus="{{focus}}" />
+      </view>
+      <view class="info-item">
+        <text class="info-title">联系方式</text>
+        <input name="number" focus="{{focus}}" />
+      </view>
+      <view class="info-item">
+        <text class="info-title">收货地址</text>
+        <input name="location" focus="{{focus}}" />
+      </view>
+      <view class="info-item">
+        <text class="info-title">门牌号</text>
+        <input name="address" focus="{{focus}}" />
+      </view>
+    </view>
+  </view>
+
+  <view class="save-wrapper">
+    <button class="save-button" form-type="submit">保存</button>
+  </view>
+  </form>
+</view>
