--- a/miniprogram/pages/personlocation/editLocation/editLocation.wxss
+++ b/miniprogram/pages/personlocation/editLocation/editLocation.wxss
@@ -1,1 +1,36 @@
 /* pages/personlocation/editLocation/editLocation.wxss */
+
+page {
+  background-color: #f6f6f6;
+  font-size: 14px;
+}
+
+.info-wrapper {
+  padding: 10px;
+}
+
+.info-inner {
+  background-color: #fff;
+}
+.info-item{
+  padding: 10px 5px;
+  border-bottom: 1px solid #f6f6f6;
+    display: flex;
+  align-items: center;
+    
+}
+.info-title{
+  line-height: 100%;
+  width: 180rpx;
+}
+.save-wrapper {
+  padding: 10px;
+}
+
+.save-button {
+  background: #41695e;
+  color: #fff;
+  height: 35px;
+  line-height: 35px;
+  border-radius: 0;
+}
